# SampleExplorer

./: .coverage  .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
biorag/: biorag.py  cli.py  enrichment.py  rag_embedding.py  rnaseq_analysis.py  transcriptome_embedding.py  utils.py
download_script/: download_and_install.sh
sample_explorer/: cli.py  rag_embedding.py  rnaseq_analysis.py  sample_explorer.py  transcriptome_embedding.py  utils.py
tests/: test_biorag.py  test_enrichment.py  test_intergrations.py  test_querydb.py  test_rag_embedding.py  test_rnaseq_analysis.py  test_semantic_db.h5ad  test_transcriptome_db.py  test_transcriptome_embedding.py
workflow/benchmarking/: README.md
workflow/benchmarking/archS4/: calculate_interpoint_distance_arch.py  calculate_semantic_similarity.py  get_arch_samples.py  snakefile
workflow/benchmarking/enrichr/: calculate_interpoint_distance_enrichr.py  calculate_semantic_similarity.py  download_enrichr_metadata_from_geo.py  get_enrichment.py  get_enrichr_studies.py  snakefile
workflow/benchmarking/metadata_processing/: create_dataframe_from_sql.py  create_metadata_dataframe.py  create_test_genesets.py
workflow/benchmarking/sem_query/: get_rag_df.py  get_sem_only.py  get_sem_seed_sem_expand.py  get_sem_seed_trans_expand.py  interpoint_distance.py  snakefile
workflow/benchmarking/transcriptome_query/: create_all_enrichment.py  snakefile  transcriptome_followed_by_expand_semantic.py  transcriptome_followed_by_expand_transcriptome.py  transcriptome_only.py
(+17 files in other folders)
