[tool.poetry]
name = "biorag"
version = "0.1.8"
description = "BioRAG: A tool for textual and gene set search against ARCHS4 data"
authors = ["wchin <wee.chin@health.wa.gov.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "2.0.2"
archs4py = "^0.2.12"
anndata = "^0.10.6"
decoupler = "^1.6.0"
scipy = "^1.12.0"
statsmodels = "^0.14.1"
sentence-transformers = "^2.5.1"
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
pytest-codecov = "^0.5.1"
coverage = "^7.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
biorag = "biorag.cli:main"

[tool.coverage.run]
omit = [
    "tests/*"
    ]